--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css"> <!-- Opsional -->
 </head>
 <body>
-  <h1 style="text-align: center; margin-top: 20px;">Judul Peta Saya</h1> <!-- Judul di halaman -->
+  <h1 style="text-align: center; margin-top: 20px;">PETA LOKASI REHAB DAS</h1> <!-- Judul di halaman -->
   <div id="map" style="height: 500px; width: 100%;"></div>
 
   <script src="leaflet.js"></script> <!-- File JavaScript Leaflet -->
